--- a/Session_1/1_getting_started_with_Jupyter_Notebooks.ipynb
+++ b/Session_1/1_getting_started_with_Jupyter_Notebooks.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "This is a Jupyter Notebook. The Jupyter Notebook is a web application that allows you to create and share documents that contain live code, equations, visualizations and explanatory text. Uses include: data cleaning and transformation, numerical simulation, statistical modeling, machine learning and much more.\n",
     "\n",
-    "A Notebook consists of cells that are used to write code, or to record explanatory notes and comments. Notebooks are working docuements that can be modified. It is good practice to save a copy of the original notebook before you start to edit. \n",
+    "A Notebook consists of cells that are used to write code, or to record explanatory notes and comments. Notebooks are working documents that can be modified. It is good practice to save a copy of the original notebook before you start to edit. \n",
     "\n",
     "You can do this now from the file menu by selecting **Make a copy... **. Continue this guide from the new copy. \n"
    ]
@@ -119,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can write notes and comments in the `Markdown` cells of a notebook using Markdown syntax.  Note that there are a variety of popular markdown languages that differ only in their expresiveness.  The Mardown supported by Jupyter Noebooks is described in the following section.  It is similar but not identical to Github Flavor Markdown (GFM). \n",
+    "You can write notes and comments in the `Markdown` cells of a notebook using Markdown syntax.  Note that there are a variety of popular markdown languages that differ only in their expressiveness.  The Markdown supported by Jupyter Notebooks is described in the following section.  It is similar but not identical to Github Flavor Markdown (GFM). \n",
     "\n",
     "This cell is a **Markdown cell**. Double click it now to see the raw markdown.\n",
     "\n",
@@ -248,22 +248,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use single back-ticks for highlting short segments of code or triple backtick pairs to enclose longer sections\n",
+    "We use single back-ticks for highlighting short segments of code or triple backtick pairs to enclose longer sections\n",
     "\n",
     "__Example 1:__  \n",
     "The Python `print` function is ...\n",
     "\n",
     "__Example 2:__\n",
     "```python\n",
-    "\"\"\"A case-sensitive and white-space sensitive palidrome checker\"\"\" \n",
+    "\"\"\"A case-sensitive and white-space sensitive palindrome checker\"\"\" \n",
     "\n",
     "from math import floor\n",
     "\n",
     "pattern = input('Type a pattern that you want to verify is a palindrome: ')\n",
     "if pattern == (pattern[::-1]):\n",
-    "    print ('\\nYes ... \"{}\"  is a palidrome'.format(pattern))\n",
+    "    print ('\\nYes ... \"{}\"  is a palindrome'.format(pattern))\n",
     "else:\n",
-    "    print ('\\nNo ... \"{}\"  is not a valid palidrome'.format(pattern))\n",
+    "    print ('\\nNo ... \"{}\"  is not a valid palindrome'.format(pattern))\n",
     "    length = len(pattern)\n",
     "    mid_pos = floor(length/2)\n",
     "    for i, char in enumerate(pattern):\n",
@@ -273,7 +273,7 @@
     "                print('The character \\'{}\\' in position {}  does not match the character \\'{}\\' in position {}'.\n",
     "                    format(pattern[i], i+1, pattern[i_dual], length-i))\n",
     "        else:\n",
-    "            break  # All inconsisent chars on LHS and RHS identified\n",
+    "            break  # All inconsistent chars on LHS and RHS identified\n",
     "```"
    ]
   },
