--- a/Session_1/2_getting_started_with_IPython.ipynb
+++ b/Session_1/2_getting_started_with_IPython.ipynb
@@ -33,10 +33,10 @@
     "\n",
     "## Goal\n",
     "\n",
-    "The aim of this notebook is to become familier with some of the most important capabilities of the IPython (Interactieve Python) REPL.  \n",
+    "The aim of this notebook is to become familiar with some of the most important capabilities of the IPython (Interactive Python) REPL.  \n",
     "Note that term `REPL` is synonymous with `shell`:\n",
     "\n",
-    ">A read–eval–print loop (REPL), also known as an interactive toplevel or language shell, is a simple, interactive computer programming environment that takes single user inputs (i.e. single expressions), evaluates them, and returns the result to the user.\n",
+    ">A read–eval–print loop (REPL), also known as an interactive top level or language shell, is a simple, interactive computer programming environment that takes single user inputs (i.e. single expressions), evaluates them, and returns the result to the user.\n",
     "\n",
     "[wikipedia](https://en.wikipedia.org/wiki/Read–eval–print_loop)"
    ]
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "IPython has many useful features.  However it is not necessary to know or remember all its features.  There is a very compreshensive help system available at all times."
+    "IPython has many useful features. However it is not necessary to know or remember all its features.  There is a very comprehensive help system available at all times."
    ]
   },
   {
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The %quickref command is one example of an IPython _magic function_.  IPython _magics_ are special functions that are a key part of the IPython package. Much of the power of the IPython interpreter is accessed by invoking the appopriate magics. We will see many such examples as we progress"
+    "The %quickref command is one example of an IPython _magic function_.  IPython _magics_ are special functions that are a key part of the IPython package. Much of the power of the IPython interpreter is accessed by invoking the appropriate magics. We will see many such examples as we progress"
    ]
   },
   {
@@ -276,7 +276,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get just a list of the available magics, exexecute `%lsmagics`"
+    "To get just a list of the available magics, execute `%lsmagics`"
    ]
   },
   {
@@ -335,7 +335,7 @@
    "source": [
     "IPython gives us more powerful help tools for any active Python object.  We can activate _software introspection_ on any object to learn more about its properties and capabilities.\n",
     "\n",
-    "We demonstrate this below with the help of a short Python script that checks palidromes, strings that read the same when scanned from left-to-right as when scanned from right-to-left."
+    "We demonstrate this below with the help of a short Python script that checks palindromes, strings that read the same when scanned from left-to-right as when scanned from right-to-left."
    ]
   },
   {
@@ -344,15 +344,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"A case-sensitive and white-space sensitive palidrome checker\"\"\" \n",
+    "\"\"\"A case-sensitive and white-space sensitive palindrome checker\"\"\" \n",
     "\n",
     "from math import floor\n",
     "\n",
     "pattern = input('Type a pattern that you want to verify is a palindrome: ')\n",
     "if pattern == (pattern[::-1]):\n",
-    "    print ('\\nYes ... \"{}\"  is a palidrome'.format(pattern))\n",
+    "    print ('\\nYes ... \"{}\"  is a palindrome'.format(pattern))\n",
     "else:\n",
-    "    print ('\\nNo ... \"{}\"  is not a valid palidrome'.format(pattern))\n",
+    "    print ('\\nNo ... \"{}\"  is not a valid palindrome'.format(pattern))\n",
     "    length = len(pattern)\n",
     "    mid_pos = floor(length/2)\n",
     "    for i, char in enumerate(pattern):\n",
@@ -362,7 +362,7 @@
     "                print('The character \\'{}\\' in position {}  does not match the character \\'{}\\' in position {}'.\n",
     "                    format(pattern[i], i+1, pattern[i_dual], length-i))\n",
     "        else:\n",
-    "            break  # All inconsisent chars on LHS and RHS identified\n",
+    "            break  # All inconsistent chars on LHS and RHS identified\n",
     "            "
    ]
   },
@@ -370,9 +370,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "IPython's _software introspection_ capbilities allow us to find out more library objects and also local objects by executeing the object name followed by a `?` in  a code cell. \n",
+    "IPython's _software introspection_ capabilities allow us to find out more library objects and also local objects by executing the object name followed by a `?` in  a code cell. \n",
     "\n",
-    "For example, run the palindorome script with the test string 'able was i ere i saw elba' (attributed to Napoloen who was exiled to the Island of Elba after his defeat at Waterloo) and inspect these objects as follows:\n",
+    "For example, run the palindrome script with the test string 'able was i ere i saw elba' (attributed to Napoleon who was exiled to the Island of Elba after his defeat at Waterloo) and inspect these objects as follows:\n",
     "\n",
     "`pattern?`\n",
     "\n",
