--- a/Session_1/3_Exploring_the_board.ipynb
+++ b/Session_1/3_Exploring_the_board.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "## Goal\n",
     "\n",
-    "The aim of this notebook is to help you famaliarize yourself with the Zynq Processing System, and the underlying OS. You will see how to run shell commands and Python commands to query the underlying hardware and software and find out the packages that are included in the PYNQ image. \n",
+    "The aim of this notebook is to help you familiarize yourself with the Zynq Processing System, and the underlying OS. You will see how to run shell commands and Python commands to query the underlying hardware and software and find out the packages that are included in the PYNQ image. \n",
     "\n",
     "## ARM A9 Processor Subsystem\n",
     "\n",
