--- a/Session_2/1_pmod_grove_tmp.ipynb
+++ b/Session_2/1_pmod_grove_tmp.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "A Grove Temperature sensor, a Grove ADC, and a Pynq Grove Adapter Adapter are required for this notebook example (a Pynq Arduino adapter could also be used instead of the Pynq Grove Adapter).\n",
     "\n",
-    "The driver for the Temperature sensor running on the IOP suports reading a single value of temperature, or reading and logging of multiple values at regular intervals."
+    "The driver for the Temperature sensor running on the IOP supports reading a single value of temperature, or reading and logging of multiple values at regular intervals."
    ]
   },
   {
