--- a/Session_2/2_pmod_oled_example.ipynb
+++ b/Session_2/2_pmod_oled_example.ipynb
@@ -276,7 +276,7 @@
    "metadata": {},
    "source": [
     "### Draw the circle\n",
-    "You can draw a circle by using the function which has just been created, and by specifiy a co-ordinate and the radius. "
+    "You can draw a circle by using the function which has just been created, and by specify a co-ordinate and the radius. "
    ]
   },
   {
