--- a/Session_3/2_boolean_generator.ipynb
+++ b/Session_3/2_boolean_generator.ipynb
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test the function by pressing the pushbuttons. LED 2 (labelled LD2 on the board) should turn on when Push-button 0 or 3 (labelled BNT0 and BTN3 on the board) are presseed, but not both together. "
+    "Test the function by pressing the pushbuttons. LED 2 (labeled LD2 on the board) should turn on when Push-button 0 or 3 (labeled BNT0 and BTN3 on the board) are pressed, but not both together. "
    ]
   },
   {
