--- a/Session_3/5_microblaze_programming.ipynb
+++ b/Session_3/5_microblaze_programming.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Arrays can be passed in two different ways. If a type other than `void` is provided then the data will be copied to the microblaze and if non-`const` the data will be copied back as well. And iterable and modifiable object can be used as the argument in this case."
+    "Arrays can be passed in two different ways. If a type other than `void` is provided then the data will be copied to the MicroBlaze and if non-`const` the data will be copied back as well. And iterable and modifiable object can be used as the argument in this case."
    ]
   },
   {
@@ -334,7 +334,7 @@
     " * Pointers to pointers\n",
     " * returning pointers\n",
     " \n",
-    "All non `void*` paramters are passed on the stack so beware of passing large arrays in this fashion or a stack overflow will result."
+    "All non `void*` parameters are passed on the stack so beware of passing large arrays in this fashion or a stack overflow will result."
    ]
   }
  ],
