--- a/Session_4/3_mmio.ipynb
+++ b/Session_4/3_mmio.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "An AXI GPIO controller has two channels. In the design, only 1 channel of each AXI controller is used (as described in the previous lab). We will only use two registers:\n",
     "\n",
-    "The data register is mapped to offset 0x0, and the tristate register is mapped to offset 0x4. To use an AXI GPIO, the tri-state register must be set to configure the IP as input or output. The data register can be read or written to. For example, the AXI GPIO connected to the LEDs sets the tri-state register to configure the IP as an output. The LEDs will turn on or off corresponding to the value written to the data register. For the buttons, or switches, the IP is configured as *input* and the value in the data register will be the value coresponding to the position of the switches or buttons. \n",
+    "The data register is mapped to offset 0x0, and the tristate register is mapped to offset 0x4. To use an AXI GPIO, the tri-state register must be set to configure the IP as input or output. The data register can be read or written to. For example, the AXI GPIO connected to the LEDs sets the tri-state register to configure the IP as an output. The LEDs will turn on or off corresponding to the value written to the data register. For the buttons, or switches, the IP is configured as *input* and the value in the data register will be the value corresponding to the position of the switches or buttons. \n",
     "\n",
     "In the following example, 3 MMIO instances will be created corresponding  to each AXI GPIO. \n",
     "\n",
@@ -96,7 +96,7 @@
    "source": [
     "### 1. Controlling the switches and push-buttons (again!)\n",
     "\n",
-    "An `MMIO` innstnace is created with an address and optionally a range. The range specifies the range of addresses that can be accessed from the base address. Care must be taken when reading and writing addresses in the system that they physically exist. Reading or writing to location that is not accessible can cause the system to hang.  "
+    "An `MMIO` instance is created with an address and optionally a range. The range specifies the range of addresses that can be accessed from the base address. Care must be taken when reading and writing addresses in the system that they physically exist. Reading or writing to location that is not accessible can cause the system to hang.  "
    ]
   },
   {
