Fix style for board peripherals

--- a/Session_1/4_Programming_onboard_peripherals.ipynb
+++ b/Session_1/4_Programming_onboard_peripherals.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "led0 = LED(base.leds[0])"
+    "led0 = base.leds[0]"
    ]
   },
   {
@@ -99,7 +99,7 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "led0 = LED(base.leds[0])\n",
+    "led0 = base.leds[0]\n",
     "for i in range(20):\n",
     "    led0.toggle()\n",
     "    time.sleep(.1)"
@@ -126,17 +126,17 @@
     "MAX_SWITCHES = 2\n",
     "MAX_BUTTONS = 4\n",
     "\n",
-    "leds = [LED(base.leds[index]) for index in range(MAX_LEDS)]\n",
-    "switches = [Switch(base.switches[index]) for index in range(MAX_SWITCHES)] \n",
-    "buttons = [Button(base.buttons[index]) for index in range(MAX_BUTTONS)] \n",
+    "leds = [base.leds[index]) for index in range(MAX_LEDS)]\n",
+    "switches = [base.switches[index]) for index in range(MAX_SWITCHES)] \n",
+    "buttons = [base.buttons[index]) for index in range(MAX_BUTTONS)] \n",
     "\n",
     "# Create lists for each of the IO component groups\n",
     "for i in range(MAX_LEDS):\n",
-    "    leds[i] = LED(base.leds[i])              \n",
+    "    leds[i] = base.leds[i])              \n",
     "for i in range(MAX_SWITCHES):\n",
-    "    switches[i] = Switch(base.switches[i])      \n",
+    "    switches[i] = base.switches[i])      \n",
     "for i in range(MAX_BUTTONS):\n",
-    "    buttons[i] = Button(base.buttons[i]) "
+    "    buttons[i] = base.buttons[i]) "
    ]
   },
   {
