updating cacheable for v2.4

--- a/Session_4/7_resize.ipynb
+++ b/Session_4/7_resize.ipynb
@@ -336,8 +336,8 @@
    "outputs": [],
    "source": [
     "xlnk = Xlnk()\n",
-    "in_buffer = xlnk.cma_array(shape=(old_height, old_width, 3), dtype=np.uint8)\n",
-    "out_buffer = xlnk.cma_array(shape=(new_height, new_width, 3), dtype=np.uint8)"
+    "in_buffer = xlnk.cma_array(shape=(old_height, old_width, 3), dtype=np.uint8, cacheable=1)\n",
+    "out_buffer = xlnk.cma_array(shape=(new_height, new_width, 3), dtype=np.uint8, cacheable=1)"
    ]
   },
   {
