--- a/Session_4/1_ps_gpio.ipynb
+++ b/Session_4/1_ps_gpio.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "### 1. Download the tutorial overlay\n",
     "\n",
-    "The `ps_gpio.bit` and `ps_gpio.tcl` files can be found in the bitstreams directory local to this folder. \n",
+    "The `ps_gpio.bit` and `ps_gpio.hwh` files can be found in the bitstreams directory local to this folder. The .tcl file that can be used to rebuild the block diagram can also be found in this folder. \n",
     "The bitstream can be downloaded by passing the relative path to the Overlay class. "
    ]
   },
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!dir ./bitstream"
+    "!dir ./bitstream/ps_gpio.*"
    ]
   },
   {
@@ -243,7 +243,7 @@
     "\n",
     "Run a loop to set the LEDs to the value of the pushbuttons. \n",
     "\n",
-    "Before executing the next cell, make sure Switch 0 (SW0) is \"on\". While the loop is running, press a push-button and notice the corresponding LED turns on. To exist the loop, change Switch 0 to off. "
+    "Before executing the next cell, make sure Switch 0 (SW0) is \"on\". While the loop is running, press a push-button and notice the corresponding LED turns on. To exit the loop, change Switch 0 to off. "
    ]
   },
   {
@@ -276,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
