--- a/Session_4/2_axi_gpio.ipynb
+++ b/Session_4/2_axi_gpio.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "### 1. Download the tutorial overlay\n",
     "\n",
-    "The `axi_gpio.bit` and `axi_gpio.tcl` files can be found in the bitstreams directory local to this folder. \n",
+    "The `axi_gpio.bit` and `axi_gpio.hwh` files can be found in the bitstreams directory local to this folder. \n",
     "The bitstream can be downloaded by passing the relative path to the Overlay class. "
    ]
   },
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!dir ./bitstream"
+    "!dir ./bitstream/axi_gpio.*"
    ]
   },
   {
@@ -76,6 +76,15 @@
    "outputs": [],
    "source": [
     "axi_gpio_design.ip_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hex(axi_gpio_design.ip_dict[\"buttons\"][\"phys_addr\"])"
    ]
   },
   {
@@ -250,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
