Update session 4 labs for v2.5 2019.1

--- a/Session_4/6_dma_tutorial.ipynb
+++ b/Session_4/6_dma_tutorial.ipynb
@@ -29,8 +29,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pynq import Overlay\n",
-    "\n",
+    "from pynq import Overlay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "overlay = Overlay(\"./bitstream/dma_tutorial.bit\")"
    ]
   },
@@ -89,14 +96,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pynq import Xlnk\n",
+    "from pynq import allocate\n",
     "import numpy as np\n",
     "\n",
     "data_size = 100\n",
     "\n",
-    "xlnk = Xlnk()\n",
-    "\n",
-    "input_buffer = xlnk.cma_array(shape=(data_size,), dtype=np.uint32)"
+    "input_buffer = allocate(shape=(data_size,), dtype=np.uint32)"
    ]
   },
   {
@@ -120,7 +125,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's check the contents of the array. The data in the following cell will be sent from PS (DDR memory) to PL (streaming FIFO)."
+    "Let's check the contents of the array. The data in the following cell will be sent from PS (DDR memory) to PL (streaming FIFO).\n",
+    "\n",
+    "### Print first few values of buffer "
    ]
   },
   {
@@ -131,7 +138,6 @@
    },
    "outputs": [],
    "source": [
-    "print(\"Print first few values of buffer ...\")\n",
     "for i in range(10):\n",
     "    print(hex(input_buffer[i]))"
    ]
@@ -159,7 +165,9 @@
     "## 5. Write DMA\n",
     "Let's read the data back from FIFO stream, and write to MM memory. The steps are similar.\n",
     "\n",
-    "We will prepare an empty array before reading data back from FIFO."
+    "We will prepare an empty array before reading data back from FIFO.\n",
+    "\n",
+    "### Print first few values of buffer "
    ]
   },
   {
@@ -168,8 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_buffer = xlnk.cma_array(shape=(data_size,), dtype=np.uint32)\n",
-    "print(\"Print first few values ...\")\n",
+    "output_buffer = allocate(shape=(data_size,), dtype=np.uint32)\n",
+    "\n",
     "for i in range(10):\n",
     "    print('0x' + format(output_buffer[i], '02x'))"
    ]
@@ -187,7 +195,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next cell will print out the data received from PL (streaming FIFO) to PS (DDR memory). This should be the same as the data we sent previously."
+    "The next cell will print out the data received from PL (streaming FIFO) to PS (DDR memory). This should be the same as the data we sent previously.\n",
+    "\n",
+    "### Print first few values of buffer "
    ]
   },
   {
@@ -196,7 +206,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Print first few values ...\")\n",
     "for i in range(10):\n",
     "    print('0x' + format(output_buffer[i], '02x'))"
    ]
