--- a/Session_2/4_pmod_grove_light.ipynb
+++ b/Session_2/4_pmod_grove_light.ipynb
@@ -14,7 +14,7 @@
     "----\n",
     "## Introduction\n",
     "\n",
-    "This example shows how to use the [Grove Light Sensor v1.1](http://www.seeedstudio.com/wiki/Grove_-_Light_Sensor), and how to plot a graph using matplotlib.\n",
+    "This example shows how to use the [Grove Light Sensor v1.1](http://wiki.seeedstudio.com/Grove-Light_Sensor/), and how to plot a graph using matplotlib.\n",
     "\n",
     "The Grove Light Sensor produces an analog signal which requires an ADC.\n",
     "\n",
