--- a/Session_4/2_axi_gpio.ipynb
+++ b/Session_4/2_axi_gpio.ipynb
@@ -169,7 +169,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pynq.lib import AxiGPIO\n",
     "led_instance = axi_gpio_design.ip_dict['leds']\n",
     "led = AxiGPIO(led_instance).channel1"
    ]
@@ -238,7 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "while(switches.read() is 1):\n",
+    "while((switches.read() & 0x1) is 1):\n",
     "    led[0:4].write(buttons.read())"
    ]
   }
