--- a/Session_4/3_mmio.ipynb
+++ b/Session_4/3_mmio.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "### 1. Controlling the switches and push-buttons (again!)\n",
     "\n",
-    "An `MMIO` innstnace is created with an address and optionally a range. The range specifies the range of addresses that can be accessed from the base address. Care must be taken when reading and writing addresses in the system that they physically exist. Reading or writing to location that is not accessible can cause the system to hang.  "
+    "An `MMIO` instance is created with an address and optionally a range. The range specifies the range of addresses that can be accessed from the base address. Care must be taken when reading and writing addresses in the system that they physically exist. Reading or writing to location that is not accessible can cause the system to hang.  "
    ]
   },
   {
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "while(switches.read(0x0) is 1):\n",
+    "while((switches.read(0x0) & 0x1) is 1):\n",
     "    leds.write(0x0, buttons.read(0x0))"
    ]
   }
