--- a/Session_4/4_basic_xlnk_example.ipynb
+++ b/Session_4/4_basic_xlnk_example.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "`Xlnk()` can assign a contiguous block of memory. The data in the memory buffer can be transferred efficiently between the PS and the PL. \n",
     "\n",
-    "Note: The `Xlnk()` driver is overlay-independent, meaning it can be used no matter what overlay you are using.\n",
+    "Note: The `Xlnk()` driver is overlay-agnostic, meaning it can be used no matter what overlay you are using.\n",
     "\n",
     "## Preparation\n",
     "\n",
@@ -21,7 +21,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from time import sleep\n",
     "from pprint import pprint\n",
     "\n",
     "def get_kb(mmu):\n",
