--- a/Session_4/5_xlnk_with_pl_master_example.ipynb
+++ b/Session_4/5_xlnk_with_pl_master_example.ipynb
@@ -96,7 +96,7 @@
    "source": [
     "## Create MicroBlaze program\n",
     "\n",
-    "The C code for a new function that will run on a MicroBlaze is provided in the next cell. The C function parameters are a physical address, a length, and data. The function will modify the contents of the It will modify data in the range [*address* : *address*+*length*], by reading the contents of each memory location, and adding an offset value *data* to each location."
+    "The C code for a new function that will run on a MicroBlaze is provided in the next cell. The C function parameters are a physical address, a length, and data. The function will modify the contents of the memory. It will modify data in the range [*address* : *address*+*length*], by reading the contents of each memory location, and adding an offset value *data* to each location."
    ]
   },
   {
