--- a/Session_1/4_Programming_onboard_peripherals.ipynb
+++ b/Session_1/4_Programming_onboard_peripherals.ipynb
@@ -121,22 +121,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set the number of Switches\n",
+    "# Set the number of LED, Switches and Buttons\n",
     "MAX_LEDS =4\n",
     "MAX_SWITCHES = 2\n",
     "MAX_BUTTONS = 4\n",
     "\n",
-    "leds = [base.leds[index]) for index in range(MAX_LEDS)]\n",
-    "switches = [base.switches[index]) for index in range(MAX_SWITCHES)] \n",
-    "buttons = [base.buttons[index]) for index in range(MAX_BUTTONS)] \n",
-    "\n",
     "# Create lists for each of the IO component groups\n",
-    "for i in range(MAX_LEDS):\n",
-    "    leds[i] = base.leds[i])              \n",
-    "for i in range(MAX_SWITCHES):\n",
-    "    switches[i] = base.switches[i])      \n",
-    "for i in range(MAX_BUTTONS):\n",
-    "    buttons[i] = base.buttons[i]) "
+    "leds = [base.leds[index] for index in range(MAX_LEDS)]\n",
+    "switches = [base.switches[index] for index in range(MAX_SWITCHES)] \n",
+    "buttons = [base.buttons[index] for index in range(MAX_BUTTONS)] "
    ]
   },
   {
